--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 html {
     margin:    0 auto;
-    max-width: 1920px;}
+    max-width: 1920px;
+
+}
 
 body {
     font-family: 'Roboto', 'Arial', sans-serif;
@@ -46,7 +48,7 @@ body {
 }
 
 .hero-content-right {
-    width: 1000px;
+    width: 500px;
     height: 225px;
     background-color: rgb(71, 70, 74);
     display: flex;
@@ -54,14 +56,13 @@ body {
     align-items: center;
     color: #E5E7EB;
     text-align: center;
+    flex: 1 0 auto;
 }
-
-
 
 
 .hero-main-text {
     font-size: 48px;
-    font-weight: bolder;
+    font-weight: 900;
     color: #F9FAF8;
     margin: 0px;
     padding: 0px;
@@ -72,7 +73,67 @@ body {
     color: #E5E7EB;
     border: none;
     padding: 8px 24px;
+    margin-top: -4px;
     font-weight: bold;
     border-radius: 8px;
 }
 
+.information {
+    background-color: #F9FAF8;
+    padding: 0px 175px 100px 175px;
+    
+}
+
+.information-header {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+    text-align: center;
+    padding: 50px;
+}
+.information-box {
+    width: 160px;
+    height: 160px;
+    border-style: solid;
+    border-color: #3882F6;
+    border-radius: 25px;
+    border-width: 4px;
+}
+
+.box-container p {
+    text-align: center;
+    color: rgb(75, 74, 74);
+    width: 160px;
+    margin-top: 8px;
+}
+
+.information-boxes {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+}
+
+.quote-section {
+    background-color: #E5E7EB;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    padding: 100px 175px 100px 175px;
+}
+
+.quote {
+    max-width: 800px;
+}
+
+.quote-text {
+    font-size: 36px;
+    font-weight: 100;
+    font-style: italic;
+    color: #1F2937;
+}
+
+.quote-attribution {
+    font-size: 22px;
+    text-align: right;
+    font-weight: 600;
+}
