--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
     background-color: #3882F6;
     color: #E5E7EB;
     border: none;
-    padding: 8px 24px;
+    padding: 8px 30px;
     margin-top: -4px;
     font-weight: bold;
     border-radius: 8px;
@@ -122,7 +122,7 @@ body {
 }
 
 .quote {
-    max-width: 800px;
+    max-width: 775px;
 }
 
 .quote-text {
@@ -136,4 +136,58 @@ body {
     font-size: 22px;
     text-align: right;
     font-weight: 600;
+}
+
+.call-to-action-section {
+    padding: 100px 175px 100px 175px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.call-to-action {
+    background-color: #3882F6;
+    color: #E5E7EB;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 190px;
+    padding: 45px 40px 45px 40px;
+    width: 925px;
+   
+}
+
+
+.button-2 {
+    background-color: #3882F6;
+    border: 2px solid #E5E7EB;
+    padding: 8px 30px;
+    font-weight: bold;
+    border-radius: 8px;
+    color: #E5E7EB;
+}
+
+.call-to-action-header {
+    font-size: 24px;
+    margin: 0px;
+    font-weight: bold;
+    padding: 0px;
+}
+
+.call-to-action-text {
+    margin: 0px;
+    padding: 0px;
+}
+
+.footer {
+    background-color: #1F2937;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 22px;
+}
+
+.footer p {
+    color: #E5E7EB;
 }
